<resources>
    <string name="app_name">TruthOrDare</string>
    <string name="lang">@string/english_language_code</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="players_fragment_label">Players Fragment</string>
    <string name="settings_fragment_label">Settings Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="truth_or_dare_title">Truth or Dare</string>
    <string name="players">Players:</string>
    <string name="name_placeholder">Name</string>
    <string name="add_player">Add player</string>
    <string name="play">Play!</string>
    <string name="game_fragment_label">Game Fragment</string>
    <string name="truth">Truth</string>
    <string name="dare">Dare</string>
    <string name="ok">OK</string>
    <string name="not_enough_players_message">In order to start the game you must add at least 2 players.</string>
    <string name="not_enough_players_title">Not enough players</string>
    <string name="dirty_mode">Dirty Mode</string>
    <string name="sexy_mode">Sexy Mode</string>
    <string name="party_mode">Party Mode</string>
    <string name="mode">Modo</string>
    <string name="choose_your_mode">"Choose your mode: "</string>
    <string name="language">Language</string>
    <string name="settings">Settings</string>
    <string name="next_player">Next player</string>
    <string name="next_player_name">Next player: %1$s</string>
    <string name="choose_language">Choose language</string>
    <string-array name="languages">
        <item>English</item>
        <item>Română</item>
        <item>Español</item>
    </string-array>
    <string-array name="languages_codes">
        <item>en</item>
        <item>ro</item>
        <item>es</item>
    </string-array>
    <string name="romanian" translatable="false">Română</string>
    <string name="english" translatable="false">English</string>
    <string name="spanish" translatable="false">Español</string>
    <string name="preference_file_key" translatable="false">com.denisatrif.truthdare.preference_file_key</string>
    <string name="english_language_code" translatable="false">en</string>
    <string name="romanian_language_code" translatable="false">ro</string>
    <string name="spanish_language_code" translatable="false">es</string>
    <string name="player_hint">Player name</string>
    <string name="mode_limit_reached">The limit for dares and truths for this mode has expired. You can purchase the full package for this mode for %1$s.</string>
    <string name="purchase">purchase</string>
    <string name="mode_limit_reached_title">Mode limit reached</string>
    <string name="all_right_everything_set">Alright, everything set</string>
    <string name="add_a_new_player">Add a new player</string>
    <string name="gender">Gender</string>
    <string name="enter_player_name">Enter player name</string>
    <string name="add_this_player">Add this player</string>
    <string name="dirty">Dirty</string>
    <string name="dirty_description">Do you have guts? Let\'s see you</string>
    <string name="sexy">Sexy</string>
    <string name="sexy_description">Let\'s get naughty</string>
    <string name="party">Party</string>
    <string name="party_description">Feeling bored? Try this</string>
    <string name="sexy_subtitle">Let\'s get naughty.</string>
    <string name="dirty_subtitle">Do you have the guts?</string>
    <string name="party_subtitle">Feeling bored? Try this.</string>
    <string name="answer_one_question">Answer one question</string>
    <string name="complete_a_practical_challenge">Complete a practical challenge</string>
    <string name="random">Random</string>
    <string name="go_back_dialog_title">You\'re having fun or you\'re busy, but are you sure you want to finish the game?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="game_description">Truth or Dare: where friendships face the ultimate test, and secrets are spilled like salsa at a clumsy dance party. It\'s the game that turns casual hangouts into a circus of embarrassing revelations and questionable life choices. Choosing truth is like opening Pandora\'s gossip box, while daring is a one-way ticket to performing interpretive dance moves only your pet goldfish should witness. It\'s the social tightrope walk where dignity hangs by a thread, and laughter is the currency of survival. In this game, the only winners are those who can laugh at themselves, and the losers? Well, they\'re probably doing the chicken dance in the middle of the living room. Truth or Dare: where awkwardness meets hilarity, and everyone wonders if they\'ll ever live it down.</string>
    <string name="game_description_short">Truth or Dare: the social game where you choose between confessing your sins or embarrassing yourself more than last year\'s holiday photos. It\'s like a reality show hosted by your friends, with questions deeper than a philosophical cat and dares wilder than a caffeinated kangaroo. Get ready for a rollercoaster of awkward confessions and laugh-out-loud ridiculousness!</string>
</resources>
