<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">

            <RadioGroup
                android:id="@+id/language_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/english"
                    style="@style/GenericRadioButtonTextStyle"
                    android:tag="@string/english_language_code"
                    android:text="@string/english" />

                <RadioButton
                    android:id="@+id/romanian"
                    style="@style/GenericRadioButtonTextStyle"
                    android:tag="@string/romanian_language_code"
                    android:text="@string/romanian" />

            </RadioGroup>
        </ScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />
    </LinearLayout>
</layout>