<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.denisatrif.truthdare.screens.EntryScreenFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_entry_screen">

        <action
            android:id="@+id/action_FirstFragment_to_PlayersFragment"
            app:destination="@id/PlayersFragment" />
    </fragment>
    <fragment
        android:id="@+id/PlayersFragment"
        android:name="com.denisatrif.truthdare.screens.PlayersFragment"
        android:label="@string/players_fragment_label"
        tools:layout="@layout/fragment_players">

        <action
            android:id="@+id/action_PlayersFragment_to_GameFragment"
            app:destination="@id/GameFragment" />
    </fragment>
    <fragment
        android:id="@+id/GameFragment"
        android:name="com.denisatrif.truthdare.screens.GameFragment"
        android:label="@string/game_fragment_label"
        tools:layout="@layout/fragment_game">

        <action
            android:id="@+id/action_PlayersFragment_to_GameFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
</navigation>