<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="player"
            type="com.denisatrif.truthdare.db.model.Player" />

        <variable
            name="callback"
            type="com.denisatrif.truthdare.screens.GameFragment.Callback" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/game_screen_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/game_container_background">

        <TextView
            android:id="@+id/textview_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/clicker_script"
            android:text="@string/truth_or_dare_title"
            android:textColor="@color/snow_text_color"
            android:textSize="70sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/player_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/quicksand_light"
            android:text="@{player.name}"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/buttons_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_first"
            tools:text="DENISUCA" />

        <LinearLayout
            android:id="@+id/buttons_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/player_name">

            <Button
                android:id="@+id/truth_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:translationZ="10dp"
                android:background="@color/half_white_transparent"
                android:onClick="@{() -> callback.generateRandom(true)}"
                android:text="@string/truth"
                android:textSize="20sp"
                android:textStyle="italic" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <Button
                android:id="@+id/dare_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@color/half_white_transparent"
                android:onClick="@{() -> callback.generateRandom(false)}"
                android:text="@string/dare"
                android:textSize="20sp"
                android:textStyle="italic" />

        </LinearLayout>

        <TextView
            android:id="@+id/question_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_light"
            android:gravity="center_horizontal"
            android:padding="50dp"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttons_container"
            tools:text="Question" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/bottom_sheet_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <include
                android:id="@+id/included_layout"
                layout="@layout/game_bottom_sheet" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>